--- a/index.html
+++ b/index.html
@@ -1,54 +1,143 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
-    <link rel="stylesheet" href="./responsive/style.css">
-    <link rel="stylesheet" href="./responsive/media.css">
-    <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
-    <script src="script.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EcoTamp</title>
+  <link rel="stylesheet" href="/responsive-css/style.css">
+  <link rel="stylesheet" href="/responsive-css/media.css">
+  <script src="script.js"></script>
 </head>
+
 <body>
-    <header class="navbar">
-        <nav class="navbar1">
-            <img class="imgnav" src="./img/EcoTamps-removebg-preview 1.png" alt="logo" width="110px" >
-        </nav>
-    </header>
-    <div class="container">
-        <div class="box-img"></div>
-            <div class="position">
-                <div class="login">
-                    <div class="titulos">
-                        <h1>
-                            faça seu login
-                        </h1>
-                        <h3>
-                           faça login para acumular pontos 
-                        </h3>
-                    </div>
-                    <div class="logininput">
-                        <input type="text" placeholder="CPF" class="input1">
-                        <input type="password" placeholder="SENHA" class="input2">
-                        <button class="entrar">ENTRA</button>
-                        <button class="google"> <i class="fa fa-google fa-2x" aria-hidden="true"></i> Entrar com google</button>
-                    </div>
-                    <span>
-                        <p>
-                            ou
-                        </p>
-                    </span>
-                    <div class="cadastro">
-                        Não tem conta?
-                        <button class="register">
-=======
-                            <a href="./registro/cadastro.html">cadastre-se</a>
->>>>>>> 284e28d3db83d269c48627bc4521ecd7b1306b2c
-                        </button>
-                    </div>
-                </div>
-            </div>
+  <header class="navbar">
+    <nav class="navbar1">
+      <img class="imgnav" src="./img/EcoTamps-removebg-preview 1.png" alt="logo" width="110px">
+    </nav>
+    <div class="search-bar">
+      <input class="input" type="text" placeholder="O que você procura?">
+      <div>
+        <button class="login-button">Login</button>
+      </div>
     </div>
-    <footer></footer>
+  </header>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="container-fluid-prim">
+    <div class="container-fluid-h1">
+      <div class="img"></div>
+      <h1>
+        Bem-Vindo a EcoTamps
+      </h1>
+      <h2>
+        Descubra aqui a melhor forma de descartar o seu lixo
+      </h2>
+    </div>
+  </div>
+  <br>
+  <main class="container-fluid-main bg-warning">
+    <div class="bloco">
+      <div class="ajus">
+        <div class="titulo">
+          <div class="text-1">
+            <h1 class="h1">
+              EcoTamps
+            </h1>
+            <p class="p">
+              A EcoTamp é uma empresa inovadora dedicada à reciclagem de tampas de garrafas, com o objetivo de reduzir o
+              impacto ambiental e promover a sustentabilidade. Fundada com a missão de transformar resíduos em recursos
+              valiosos, a EcoTamp se destaca por seu compromisso com a responsabilidade ambiental e a economia circular.
+            </p>
+          </div>
+          <div class="img-1">
+            <img src="./img/WhatsApp_Image_2024-11-25_at_23.14.28-removebg-preview (1).png" alt="" class="img" width="400px">
+          </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="titulo2">
+          <div class="text-2">
+            <h1 class="h1-2">
+              CAMINHOS
+            </h1>
+            <p class="p2">
+              A EcoTamp acredita que, através da colaboração e inovação, é possível criar um futuro mais sustentável e
+              reduzir significativamente a poluição plástica. Junte-se a nós nessa jornada para transformar tampas de
+              garrafas em um recurso valioso e proteger nosso planeta para as gerações futuras.
+            </p>
+
+          </div>
+          <div class="img-2">
+            <img src="./img/WhatsApp Image 2024-11-25 at 23.17.39.jpeg" alt="pet" width="500px">
+          </div>
+        </div>
+      </div>
+    </div>
+    <br>
+    <div class="barraprod">
+      <h1>
+        OBJETIVOS
+      </h1>
+    </div>
+    <div class="container-fluid-service">
+      <div class="card1 ">
+        <p>
+          Redução de Resíduos Plásticos: A EcoTamp visa diminuir a quantidade de tampas de garrafas que acabam em
+          aterros sanitários e nos oceanos, contribuindo para a preservação do meio ambiente.
+        </p>
+      </div>
+      <div class="card2">
+        <p>
+          Educação Ambiental: A empresa se dedica a conscientizar a população sobre a importância da reciclagem e do
+          descarte correto de resíduos, promovendo práticas sustentáveis em comunidades locais.
+        </p>
+      </div>
+      <div class="card3">
+        <p>
+          Inovação e Tecnologia: Investir em tecnologias avançadas de reciclagem para aumentar a eficiência e a
+          qualidade dos materiais reciclados, tornando-os competitivos no mercado.
+        </p>
+      </div>
+    </div>
+    </div>
+    <div class="box">
+      <div class="h1">
+        Deixe seu feedback
+        <img src="./img/Design_sem_nome__6_-removebg-preview.png" alt="" class="cabinha">
+      </div>
+      <div class="form">
+        <form class="quest">
+          <div class="input-1">
+            <input type="text" id="nome" name="nome" required placeholder="DIGITE SEU NOME">
+        <input type="email" id="email" name="email" required placeholder="DIGITE SEU EMAIL">
+          </div>
+        <select id="cidade" name="cidade" required class="select">
+            <option value="">Selecione uma cidade</option>
+            <option value="Recife">Recife</option>
+            <option value="Olinda">Olinda</option>
+            <option value="Jaboatão dos Guararapes">Jaboatão dos Guararapes</option>
+            <option value="Caruaru">Caruaru</option>
+            <option value="Petrolina">Petrolina</option>
+            <option value="Garanhuns">Garanhuns</option>
+            <option value="Cabo de Santo Agostinho">Cabo de Santo Agostinho</option>
+            <option value="Santa Cruz do Capibaribe">Santa Cruz do Capibaribe</option>
+            <option value="Igarassu">Igarassu</option>
+            <option value="São Lourenço da Mata">São Lourenço da Mata</option>
+        </select>
+        <br><br>
+        <input type="text" id="bloco" name="bloco" required placeholder="diga sua opinião" class="opn">
+        <br><br>
+        <input type="submit" value="Enviar" class="btn">
+        </form>
+      </div>
+    </div>
+  </main>
+</body>
+</html>
 </body>
 </html>
