--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EcoTamp</title>
-  <link rel="stylesheet" href="/responsive-css/style.css">
-  <link rel="stylesheet" href="/responsive-css/media.css">
+  <link rel="stylesheet" href="./responsive-css/style.css">
+  <link rel="stylesheet" href="./responsive-css/media.css">
   <script src="script.js"></script>
 </head>
 
